Fix footer menu on mobile and also swipe scroll

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -648,6 +648,7 @@ form#search-noresults-form
         display inline-block
         margin 0 5px
         
+        
 #authors
   .author-box
     height 400px
@@ -763,6 +764,9 @@ form#search-noresults-form
   .spacer-190
     height (_mobileMenu + 20px)
   
+  section.app
+    min-height 300px
+  
   #home
     .swipe-wrap
       background _light
@@ -793,6 +797,13 @@ form#search-noresults-form
   .page-fixed-image
     &.fixed
       display none !important
+      
+  form#search-noresults-form
+    input,
+    button
+      margin 0 0 20px 0
+      width 100%
+      text-align center
 
   
   #category
